--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Pressure Washing Doncaster</h2>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
 <p>Pressure washing is a fast and effective way to clean outdoor surfaces and restore their original look. Over time, driveways, paths, walls, decking and roofs can become dirty, slippery and stained with moss, algae and grime. Professional pressure washing removes this build-up safely, improving both appearance and safety. Clean surfaces not only look better but also last longer when kept free from damaging dirt and growth. Pressure washing is ideal for freshening up your property, preparing surfaces for painting or simply making everything look clean, tidy and well cared for.</p>
 <p>Looking to restore your driveway, patio, or outdoor surfaces? Our
 <a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
