--- a/test-gut.html
+++ b/test-gut.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="index, follow">
 <title>Gutter Services Doncaster - Instant Online Quote Calculator</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/gutter-services.html">
+<link rel="canonical" href="https://homerepairs4u.com/test-gut.html">
 <meta name="description" content="Professional gutter services - Instant Online Quote, Cleaning, Clearing, Repairs, Replacement. Reliable local service delivering quality results.">
 
 <style>
