--- a/test-gut.html
+++ b/test-gut.html
@@ -67,7 +67,7 @@ input:invalid { border-color:red; background:#ffe6e6; }
 <h2>Gutter Clearing Services Instant Quote</h2>
 <p>Simply enter in metres the width of each side of your home</p>
 <p>If your home has more than 4 sides or guttering on different levels simply add all widths into 1 input box.</p>
-<div class="Choose Service">
+<div class="Choose-Service">
 <div class="pair">
 <input type="number" id="house2Side1" placeholder="Side 1 (m)" min="0" step="0.5" oninput="calculateTotal()">
 <input type="number" id="house2Side2" placeholder="Side 2 (m)" min="0" step="0.5" oninput="calculateTotal()">
