--- a/test-gut.html
+++ b/test-gut.html
@@ -25,8 +25,8 @@ header{ text-align:center; padding:25px 10px; background:#fff; border-bottom:4px
 .Choose-Service { margin-bottom:18px; }
 .Choose-Service label { display:block; font-size:14px; margin-bottom:6px; }
 .Choose-Service label span { font-size:12px; opacity:0.6; }
-.Choose-Service input, .service select { width:100%; padding:8px; border:2px solid #000; border-radius:6px; text-align:right; background:#fff; font-size:17px; }
-.Choose-Service input:focus, .service select:focus { outline:2px solid #000; background:#fff; }
+.service input, .service select { width:100%; padding:8px; border:2px solid #000; border-radius:6px; text-align:right; background:#fff; font-size:17px; }
+.service input:focus, .service select:focus { outline:2px solid #000; background:#fff; }
 .pair { display:flex; gap:8px; }
 .pair input { flex:1 1 auto; }
 .subtotal { margin-top:4px; font-size:13px; opacity:0.7; text-align:right; }
