--- a/test-gut.html
+++ b/test-gut.html
@@ -62,36 +62,16 @@ input:invalid { border-color:red; background:#ffe6e6; }
 </header>
 
 <main style="max-width:1200px; margin:0 auto; padding:0 15px;">
-<!-- HOW IT WORKS -->
+<!-- HOW IT WORKS - CENTRALIZED ON PAGE -->
 <div style="max-width:420px; margin:30px auto; padding:20px; text-align:center; background:#f5f5f5; border:2px solid #000; border-radius:10px;">
-
 <h2 style="margin-bottom:15px;">How the Gutter Calculator Works</h2>
 
-<p><strong>1. Measure your gutters</strong><br>
-Measure the length of guttering on each side of your property (in metres) and enter the measurements into the boxes provided.</p>
+<p><strong>1. Measure your gutters:</strong> Enter the length of guttering on each side of your property (in metres).</p>
+<p><strong>2. Total gutter length:</strong> The calculator adds all measurements to give a total.</p>
+<p><strong>3. Choose your service:</strong> Select the service needed and the price updates instantly.</p>
+<p><strong>4. Different levels?</strong> If you have guttering on a porch, extension, or garage, just add the total length here.</p>
 
-<p><strong>2. Total gutter length</strong><br>
-The calculator automatically adds all measurements together to give a total gutter length.</p>
-
-<p><strong>3. Choose your service</strong><br>
-Select the service you need from the dropdown. Your price updates instantly.</p>
-
-<p><strong>4. Minimum charge</strong><br>
-A minimum charge applies to small jobs. This will be clearly shown in your total.</p>
-
-<p><strong>5. Instant price</strong><br>
-Your estimated price updates automatically as you enter measurements.</p>
-
-<hr style="margin:20px 0; border:1px solid #000;">
-
-<p><strong>Guttering on different levels?</strong><br>
-If you have guttering on a front porch, extension, garage, or on different levels, simply add that length to the total measurements.</p>
-
-<p>You do not need to separate levels — the calculator works using the <strong>total gutter length</strong>.</p>
-
-<p><strong>Not sure on measurements?</strong><br>
-Request a call back or call us directly and we’ll be happy to help.</p>
-
+<p><strong>Not sure on measurements?</strong> Request a call back or call us directly and we’ll be happy to help.</p>
 </div>
 
 <!-- CALCULATOR -->
