--- a/test-gut.html
+++ b/test-gut.html
@@ -62,16 +62,15 @@ input:invalid { border-color:red; background:#ffe6e6; }
 </header>
 
 <main style="max-width:1200px; margin:0 auto; padding:0 15px;">
-<!-- HOW IT WORKS - CENTRALIZED ON PAGE -->
-<div style="max-width:420px; margin:30px auto; padding:20px; text-align:center; background:#f5f5f5; border:2px solid #000; border-radius:10px;">
-<h2 style="margin-bottom:15px;">How the Gutter Calculator Works</h2>
 
-<p><strong>1. Measure your gutters:</strong> Enter the length of guttering on each side of your property (in metres).</p>
-<p><strong>2. Total gutter length:</strong> The calculator adds all measurements to give a total.</p>
-<p><strong>3. Choose your service:</strong> Select the service needed and the price updates instantly.</p>
-<p><strong>4. Different levels?</strong> If you have guttering on a porch, extension, or garage, just add the total length here.</p>
-
-<p><strong>Not sure on measurements?</strong> Request a call back or call us directly and we’ll be happy to help.</p>
+<!-- HOW IT WORKS - plain, centralised text -->
+<div style="text-align:center; margin:20px 0;">
+<p><strong>How the Gutter Calculator Works</strong></p>
+<p>1. Measure your gutters: Enter the length of guttering on each side of your property (in metres).</p>
+<p>2. Total gutter length: The calculator adds all measurements to give a total.</p>
+<p>3. Choose your service: Select the service needed and the price updates instantly.</p>
+<p>4. Different levels? If you have guttering on a porch, extension, or garage, just add the total length here.</p>
+<p>Not sure on measurements? Request a call back or call us directly and we’ll be happy to help.</p>
 </div>
 
 <!-- CALCULATOR -->
