--- a/test-gut.html
+++ b/test-gut.html
@@ -66,12 +66,12 @@ input:invalid { border-color:red; background:#ffe6e6; }
 <!-- HOW IT WORKS - plain, centralised text -->
 <div style="text-align:center; margin:20px 0;">
 <p><strong>How the Gutter Calculator Works</strong></p>
-<p>1. Measure your each side of your house outside across the house walls: Enter the length of each side of your property (in metres).</p>
-<p>2. If you have extra lengths of guttering to be serviced such has canopies, outer buildings etc add the metres to plus sides</p>
-<p>2. If you have extra lengths of guttering to be serviced such has canopies outer buil</p>
-<p>3. Choose your service: Select the service needed and the price updates instantly.</p>
+<p>1. Measure approximately each side of your property outside across the width of the house walls : Enter the length of each side of your property (in metres).</p>
+<p>2. If you have extra lengths of guttering to be serviced such has canopies, outer buildings etc, add the metres to plus sides</p>
+<p>3. Choose your service: Select the service needed from the drop-down box and the price updates instantly for each side.</p>
 <p>4. Different levels? If you have guttering on a porch, extension, or garage, just add the total length here.</p>
-<p>Not sure on measurements? Request a call back or call us directly and we’ll be happy to help.</p>
+<p>5. Happy with your service quote, pick a date, answer the 3 simple questions and request a call back</p>
+<p>6. Not sure about measurements or requie advice, give me a call i am happy to help</p>
 </div>
 
 <!-- CALCULATOR -->
