--- a/test-gut.html
+++ b/test-gut.html
@@ -67,6 +67,7 @@ input:invalid { border-color:red; background:#ffe6e6; }
 <div style="text-align:center; margin:20px 0;">
 <p><strong>How the Gutter Calculator Works</strong></p>
 <p>1. Measure approximately each side of your property outside across the width of the house walls : Enter the length of each side of your property (in metres).</p>
+<p>2. Not all properties have 4 sides, or you may require only one side servicing, ignore what does not apply!</p>
 <p>2. If you have extra lengths of guttering to be serviced such has canopies, outer buildings etc, add the metres to plus sides</p>
 <p>3. Choose your service: Select the service needed from the drop-down box and the price updates instantly for each side.</p>
 <p>4. Different levels? If you have guttering on a porch, extension, or garage, just add the total length here.</p>
