--- a/quote-calculator/guttering.html
+++ b/quote-calculator/guttering.html
@@ -6,7 +6,7 @@
 <meta name="robots" content="index, follow">
 <title>Gutter Clearing Service - Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/test-gut.html">
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/guttering.html">
 <meta name="description" content="Professional gutter services - Instant Online Quote, Clearing, Cleaning, Replacement. Reliable local service delivering quality results.">
 
 <style>
