--- a/quote-calculator/guttering.html
+++ b/quote-calculator/guttering.html
@@ -65,7 +65,7 @@ input:invalid { border-color:red; background:#ffe6e6; }
 
 <!-- HOW IT WORKS - plain, centralised text -->
 <div style="text-align:center; margin:20px 0;">
-<p><strong>How the Gutter Calculator Works</strong></p>
+<h1>How the Gutter Calculator Works</h1>
 <p>1. Measure approximately each side of your property outside across the width of the house walls : Enter the length of each side of your property (in metres).</p>
 <p>2. Not all properties have 4 sides, or you may require only one side servicing, ignore what does not apply!</p>
 <p>2. If you have extra lengths of guttering to be serviced such has canopies, outer buildings etc, add the metres to plus sides</p>
@@ -74,7 +74,7 @@ input:invalid { border-color:red; background:#ffe6e6; }
 <p>5. Happy with your service quote, pick a date, answer the 3 simple questions and request a call back</p>
 <p>6. Not sure about measurements or requie advice, give me a call i am happy to help</p>
 </div>
-
+<h1></h1>
 <!-- CALCULATOR -->
 <div class="calculator">
 
